# py-sdl2-conda-aarch

./: pixi.toml  pyproject.toml
